--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,7 +15,8 @@ python-dotenv==1.0.0
 openai==1.6.1
 
 # Database
-psycopg2-binary==2.9.9
+psycopg2-binary==2.9.9 ; python_version < "3.13"
+psycopg[binary]==3.2.1 ; python_version >= "3.13"
 pgvector==0.2.4
 sqlalchemy==2.0.23
 alembic==1.13.1
